add uis with function fix

--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -36,11 +36,11 @@ margin-bottom: 2.5%;
 }
 
 .standard-card {
-  background-color: #0DCAF0;
+  background-color: #aad2a0;
 }
 
 .super-card {
-  background-color: #057E97;
+  background-color: #bde1e9;
 }
 
 .debt-breakdown {
