--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="container fv-back-color">
     <div class="row">
       <div class="col-12 p-2 mb-3">
-        <h1 class="main-word mt-2">EnDebt...Outsmart your Credit Card Debt with a Swipe of a Finger.</h1>
+        <h1 class="main-word mt-2">EnDebt...Outsmart your Credit Card Debt with a Few Clicks!.</h1>
         <p>Your Portable Credit Card Debt Payment Platform</p>
       </div>
         <%= image_tag 'payapp.svg'%>
@@ -13,7 +13,7 @@
       <%# </div> %>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-2">
-          <%= link_to "Add Your Debt", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
         </div>
       <% end %>
     </div>
@@ -42,7 +42,7 @@
       </div>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-2">
-          <%= link_to "Add Your Debt", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
         </div>
       <% end %>
     </div>
@@ -71,7 +71,7 @@
     </div>
       <% if user_signed_in? %>
         <div class="d-flex justify-content-center mt-4 mb-5">
-          <%= link_to "Add Your Debt", new_debt_path, class: "btn btn-action m-3" %>
+          <%= link_to "Let's Start Here!", new_debt_path, class: "btn btn-action m-3" %>
         </div>
       <% end %>
   </div>
