--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="container first_view">
-    <h2>Hey, how are you?? <%= @debt.name %></h2>
+    <h2>Hey, <%= @debt.name %></h2>
   </div>
 
 
@@ -14,20 +14,26 @@
 <!--/wrapper--></div> %>
 
 <div class="container payment mt-3">
-  <% @selected_payment_options.each do |option| %>
   <div class="container schedule mb-5 shadow-sm p-3 mt-3 debt-breakdown rounded">
-    <h5>Your Next Payment Due Date</h5>
-    <% option.payments.each do |payment| %>
-      <% if payment.status === 1 %>
-        <h3><%= payment.next_paying_date %></h3>
+    <% @selected_payment_options.each do |option| %>
+      <% option.payments.each do |payment| %>
+        <% if payment.status === 1 %>
+          <h5>Your Next Payment Due Date</h5>
+          <h3><%= payment.next_paying_date %></h3>
+        <% elsif payment.status === 3 %>
+          <h5>You made it!!</h5>
+        <% end %>
+        <div class="mt-3">
+          <% if payment.status === 1 %>
+            <h6>Did you pay this Month???</h6>
+            <%= link_to "YES!!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-action mt-3" %>
+          <% elsif payment.status === 3 %>
+            <h5>Good Job and No Debt Anymore!</h5>
+          <% end %>
+        </div>
       <% end %>
     <% end %>
-    <div class="confirm mt-3">
-    <h6>Did you pay this Month???</h6>
-    <%= link_to "YES!!", payment_options_paid_path(debt_id: @debt.id, payment: true), class: "btn btn-action mt-3" %>
   </div>
-  </div>
-  <% end %>
 </div>
 
 
@@ -44,10 +50,10 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="50000">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <%= column_chart @data_all, colors: ["#78C1F3","#FFC93C"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
+            <%= column_chart @data_all, colors: ["#FFC93C","#78C1F3"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
           </div>
           <div class="carousel-item">
-            <%= pie_chart @progress_data, colors: ["#78C1F3","#FFC93C"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
+            <%= pie_chart @progress_data, colors: ["#FFC93C","#78C1F3"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
             <h3><%= (option.debt.remaining_principal/@debt.original_principal)*100 %> % of your progress</h3>
           </div>
           <%# <div class="carousel-item">
